examples/kubernetes/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smpp-logger
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smpp-logger
  namespace: smpp-logger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smpp-logger
  template:
    metadata:
      labels:
        app: smpp-logger
    spec:
      containers:
        - name: smpp-logger
          image: ghcr.io/overkillinc/smpp-logger:latest
          ports:
            - containerPort: 2775
              name: smpp
            - containerPort: 8080
              name: http
          readinessProbe:
            tcpSocket:
              port: smpp
          livenessProbe:
            tcpSocket:
              port: smpp
      imagePullSecrets:
        - name: ghcr-creds
---
apiVersion: v1
kind: Service
metadata:
  name: smpp-logger
  namespace: smpp-logger
spec:
  type: NodePort
  selector:
    app: smpp-logger
  ports:
    - name: smpp
      port: 2775
      targetPort: smpp
      nodePort: 30075
    - name: http
      port: 8080
      targetPort: http
      nodePort: 31513
