examples/kubernetes/smpp-logger-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smpp-logger-ui
  namespace: smpp-logger
spec:
  selector:
    app: smpp-logger
  ports:
    - name: http
      port: 8080
      targetPort: 8080
