examples/kubernetes/staging-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smpp-logger
  namespace: smpp-logger-staging
spec:
  type: NodePort
  selector:
    app: smpp-logger
  ports:
    - name: smpp
      port: 2775
      targetPort: 2775
      nodePort: 30076
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 31514
